XERCESC-2168 - Memory leak in ValueVectorOf

git-svn-id: https://svn.apache.org/repos/asf/xerces/c/trunk@1872116 13f79535-47bb-0310-9956-ffa450edef68